--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=4IHGladj9hEywAdWyuQECrwyjJ0ug3vr&authKey=QDSxADgL2Q612gaFeZDnGOw3LIRtt3XeCA2ildCyB8hyh6Uam7J5oM1VZNSD1sDM&noverify=0&group_code=805800484"
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=F2g5EVr9jCAOff78VfoF5PwvYJkp6Wju&authKey=RDb%2F2X%2B0AWkVhigiF%2BgQOfNPbOK%2FvCz0M1fblUDL0XdWXllM%2Fah3JoYcAYOpIOHv&noverify=0&group_code=736100826"
 </script>	
 </body>	
 </html>
