--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=F2g5EVr9jCAOff78VfoF5PwvYJkp6Wju&authKey=RDb%2F2X%2B0AWkVhigiF%2BgQOfNPbOK%2FvCz0M1fblUDL0XdWXllM%2Fah3JoYcAYOpIOHv&noverify=0&group_code=736100826"
+location.href="https://sharechain.qq.com/e7f5e6ea16f8056936dd229b9698fa4d"
 </script>	
 </body>	
 </html>
