--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="https://sharechain.qq.com/e7f5e6ea16f8056936dd229b9698fa4d"
+location.href="https://lds2.cc"
 </script>	
 </body>	
 </html>
