--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="http://sv-1317141968.cos-website.ap-nanjing.myqcloud.com/?t=NWsn"
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=F2g5EVr9jCAOff78VfoF5PwvYJkp6Wju&authKey=RDb%2F2X%2B0AWkVhigiF%2BgQOfNPbOK%2FvCz0M1fblUDL0XdWXllM%2Fah3JoYcAYOpIOHv&noverify=0&group_code=736100826"
 </script>	
 </body>	
 </html>
