--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=psbQRjqkYOZOco3lhzoZVHOLHOmkpCef&authKey=LlbRxBDq%2FJka4y6uD9qGvyymPZDeu0xb2OKGHEVTtIG0j%2FKvjFo3zWzQU9LPhug3&noverify=0&group_code=119054820"
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=rVVKP1PpV_HAcVDpLmWCzsdgW2CDSWZ-&authKey=QWptl4rK2MYC73oSP6DITNTrAYmhIS4YydaQeBot%2Bg3e%2BBY9NYbMJEjw%2FxeYrh28&noverify=0&group_code=1006331027"
 </script>	
 </body>	
 </html>
