--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=rVVKP1PpV_HAcVDpLmWCzsdgW2CDSWZ-&authKey=QWptl4rK2MYC73oSP6DITNTrAYmhIS4YydaQeBot%2Bg3e%2BBY9NYbMJEjw%2FxeYrh28&noverify=0&group_code=1006331027"
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=C2tkpayp5ySiOduk1aCVCUU5RXFtWI1B&authKey=qDLI%2B6izPo2cc5hvarWtkGLGDgNmvt8f5dwGsHQdEI4jAMfryeUmhY5n%2BWfWBeOe&noverify=0&group_code=1007383424"
 </script>	
 </body>	
 </html>
