--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=C2tkpayp5ySiOduk1aCVCUU5RXFtWI1B&authKey=qDLI%2B6izPo2cc5hvarWtkGLGDgNmvt8f5dwGsHQdEI4jAMfryeUmhY5n%2BWfWBeOe&noverify=0&group_code=1007383424"
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=ENUAQ_FY5ATGQvA49lkr09_b7DuTydw8&authKey=hhx2LaRrdmqpgZprN9CzCjJHd8%2Fuc%2FkzbCNuo4L8RSRWG3t5jSgoJSjjm5Qc9fiL&noverify=0&group_code=566024278"
 </script>	
 </body>	
 </html>
