--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=ENUAQ_FY5ATGQvA49lkr09_b7DuTydw8&authKey=hhx2LaRrdmqpgZprN9CzCjJHd8%2Fuc%2FkzbCNuo4L8RSRWG3t5jSgoJSjjm5Qc9fiL&noverify=0&group_code=566024278"
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=mU88UeOCU_tcDNOxl_2RJMwMKZ17WIK5&authKey=AeK2CnkvfBF2GAOOd8Gc2ctLRFLE910IC3tGPN0QPemG3htymb4mVOeXAFmvDQuE&noverify=0&group_code=806092236"
 </script>	
 </body>	
 </html>
