--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=mU88UeOCU_tcDNOxl_2RJMwMKZ17WIK5&authKey=AeK2CnkvfBF2GAOOd8Gc2ctLRFLE910IC3tGPN0QPemG3htymb4mVOeXAFmvDQuE&noverify=0&group_code=806092236"
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=u6um5yoEYs8PdOKEtKH7d0QdetmzksBz&authKey=Hq3v650%2B9MtWdYWNU2Ezb4VhWU5uDciP0N3pEW4P08nIeZcts%2F%2BgbjhUo%2B282OLU&noverify=0&group_code=348440538"
 </script>	
 </body>	
 </html>
