--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>	
 <body>	
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=u6um5yoEYs8PdOKEtKH7d0QdetmzksBz&authKey=Hq3v650%2B9MtWdYWNU2Ezb4VhWU5uDciP0N3pEW4P08nIeZcts%2F%2BgbjhUo%2B282OLU&noverify=0&group_code=348440538"
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=p-nYpYWLeGrHh8W3HXZsBl08y9AafmAB&authKey=KiKk8PQ1AQCYyFXYLrzt4mpoVgdN3aNI3Pm3iGRfYgQys2aqIw2uHpx6NwEnGf0o&noverify=0&group_code=332439709"
 </script>	
 </body>	
 </html>
